// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel plugin should find all the types of Components 1`] = `
<div>
  <ClassComponent>
    <div
      data-testid="a8f769be"
    />
  </ClassComponent>
</div>
`;

exports[`babel plugin should find all the types of Components 2`] = `
<div>
  <ArrowFunctionalComponent>
    <div
      data-testid="f49764c6"
    />
  </ArrowFunctionalComponent>
</div>
`;

exports[`babel plugin should find all the types of Components 3`] = `
<div>
  <FunctionalComponent>
    <p
      data-testid="b5d7faff"
    />
  </FunctionalComponent>
</div>
`;

exports[`babel plugin should find all the types of Components 4`] = `
<div>
  <ComposedComponent>
    <Button
      data-testid="8e388bfc"
    >
      <button
        data-testid="8e388bfc"
      />
    </Button>
  </ComposedComponent>
</div>
`;

exports[`babel plugin should find all the types of Components 5`] = `
<div>
  <ComponentWithAttrs>
    <div
      data-test="testme"
      data-testid="889909b2"
    />
  </ComponentWithAttrs>
</div>
`;

exports[`babel plugin should find all the types of Components 6`] = `
<div>
  <DefaultClass>
    <div
      data-51b7b868={true}
    />
  </DefaultClass>
</div>
`;

exports[`babel plugin should find all the types of Components 7`] = `
<div>
  <DefaultClass>
    <div
      data-7d3c8cda={true}
    />
  </DefaultClass>
</div>
`;

exports[`babel plugin should find nested Component 1`] = `
<ClassComponent>
  <div
    data-testid="a8f769be"
  >
    <ArrowFunctionalComponent>
      <div
        data-testid="f49764c6"
      >
        <FunctionalComponent>
          <p
            data-testid="b5d7faff"
          >
            <ComposedComponent>
              <Button
                data-testid="8e388bfc"
              >
                <button
                  data-testid="8e388bfc"
                />
              </Button>
            </ComposedComponent>
          </p>
        </FunctionalComponent>
      </div>
    </ArrowFunctionalComponent>
  </div>
</ClassComponent>
`;

exports[`babel plugin should find wrapped component 1`] = `
<ComposedComponent2>
  <ComposedComponent
    data-testid="60d032ee"
  >
    <Button
      data-testid="8e388bfc 60d032ee"
    >
      <button
        data-testid="8e388bfc 60d032ee"
      >
        <div>
          test text
        </div>
      </button>
    </Button>
  </ComposedComponent>
</ComposedComponent2>
`;

exports[`babel plugin should save Component\`s root attrs 1`] = `
<ComponentWithAttrs>
  <div
    data-test="testme"
    data-testid="889909b2"
  />
</ComponentWithAttrs>
`;

exports[`babel plugin should save Component\`s root attrs 2`] = `
DOMStringMap {
  "test": "testme",
  "testid": "889909b2",
}
`;

exports[`babel plugin should skip React.Fragment 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.B = exports.A = void 0;

var _react = _interopRequireWildcard(require(\\"react\\"));

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } else { var newObj = {}; if (obj != null) { for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = Object.defineProperty && Object.getOwnPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : {}; if (desc.get || desc.set) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } } newObj.default = obj; return newObj; } }

const A = () => _react.default.createElement(_react.default.Fragment, null, _react.default.createElement(\\"div\\", null));

exports.A = A;

const B = () => _react.default.createElement(_react.Fragment, null, _react.default.createElement(\\"div\\", null));

exports.B = B;"
`;

exports[`babel plugin transform should transform conditionals functions 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.ifRender = exports.conditionalRender = exports.ternaryRender = void 0;

var _react = _interopRequireDefault(require(\\"react\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

/* eslint-disable-next-line no-unused-vars */
const ternaryRender = ({
  children,
  flag
}) => flag ? _react.default.createElement(\\"div\\", {
  \\"data-96c8a304\\": true
}, children) : _react.default.createElement(\\"a\\", {
  \\"data-96c8a304\\": true
}, children);
/* eslint-disable-next-line no-unused-vars */


exports.ternaryRender = ternaryRender;
ternaryRender.testId = \\"96c8a304\\";

const conditionalRender = ({
  children,
  flag
}) => flag && _react.default.createElement(\\"div\\", {
  \\"data-e8ffac7d\\": true
}, children);
/* eslint-disable-next-line no-unused-vars */


exports.conditionalRender = conditionalRender;
conditionalRender.testId = \\"e8ffac7d\\";

const ifRender = ({
  children,
  flag
}) => {
  if (flag) {
    return _react.default.createElement(\\"div\\", {
      \\"data-633adcac\\": true
    }, children);
  }

  return null;
};

exports.ifRender = ifRender;
ifRender.testId = \\"633adcac\\";"
`;

exports[`babel plugin transform should transform declared named class in default 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireWildcard(require(\\"react\\"));

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } else { var newObj = {}; if (obj != null) { for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = Object.defineProperty && Object.getOwnPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : {}; if (desc.get || desc.set) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } } newObj.default = obj; return newObj; } }

// eslint-disable-next-line
class DefaultClass extends _react.Component {
  render() {
    return _react.default.createElement(\\"div\\", {
      \\"data-7d3c8cda\\": true
    }, this.props.children);
  }

}

DefaultClass.testId = \\"7d3c8cda\\";
var _default = DefaultClass;
exports.default = _default;"
`;

exports[`babel plugin transform should transform default anonymous function 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = _default;

var _react = _interopRequireDefault(require(\\"react\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function _default({
  children,
  'data-testid': __dataprop__
}) {
  return _react.default.createElement(\\"div\\", {
    \\"data-testid\\": \\"65353e34\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
  }, children);
}

if (module.exports) {
  module.exports.default.testid = \\"65353e34\\";
}"
`;

exports[`babel plugin transform should transform default named class 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireWildcard(require(\\"react\\"));

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } else { var newObj = {}; if (obj != null) { for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = Object.defineProperty && Object.getOwnPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : {}; if (desc.get || desc.set) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } } newObj.default = obj; return newObj; } }

// eslint-disable-next-line
class DefaultClass extends _react.Component {
  render() {
    return _react.default.createElement(\\"div\\", {
      \\"data-51b7b868\\": true
    }, this.props.children);
  }

}

exports.default = DefaultClass;

if (module.exports) {
  module.exports.default.testId = \\"51b7b868\\";
}"
`;

exports[`babel plugin transform should transform default named function 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = NamedFunc;

var _react = _interopRequireDefault(require(\\"react\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function NamedFunc({
  children,
  'data-testid': __dataprop__
}) {
  return _react.default.createElement(\\"div\\", {
    \\"data-testid\\": \\"e7f23ea4\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
  }, children);
}

if (module.exports) {
  module.exports.default.testid = \\"e7f23ea4\\";
}"
`;

exports[`babel plugin transform should transform source code depends on the env option 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.FunctionalComponent = FunctionalComponent;
exports.default = exports.ComposedComponent2 = exports.ComponentNoDestructure = exports.ComponentWithAttrs = exports.ComposedComponent = exports.ArrowFunctionalComponent = exports.ClassComponent = void 0;

var _react = _interopRequireDefault(require(\\"react\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function _extends() { _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; }; return _extends.apply(this, arguments); }

const Button = props => _react.default.createElement('button', props, props.children);
/* eslint-disable no-unused-vars */


const UnexportComponent = ({
  children,
  'data-testid': __dataprop__
}) => _react.default.createElement(\\"div\\", process.env.RESELECTOR === \\"true\\" ? {'data-testid': \\"c7b7156f\\" + (__dataprop__ ? (' ' + __dataprop__) : '')} : {}, children);
/* eslint-enable no-unused-vars */


UnexportComponent.testid = \\"c7b7156f\\";

class ClassComponent extends _react.default.Component {
  render() {
    return _react.default.createElement(\\"div\\", process.env.RESELECTOR === \\"true\\" ? {'data-testid': \\"a8f769be\\" + (this.props['data-testid'] ? (' ' + this.props['data-testid']) : '')} : {}, this.props.children);
  }

}

exports.ClassComponent = ClassComponent;
ClassComponent.testid = \\"a8f769be\\";

const ArrowFunctionalComponent = ({
  children,
  'data-testid': __dataprop__
}) => _react.default.createElement(\\"div\\", process.env.RESELECTOR === \\"true\\" ? {'data-testid': \\"f49764c6\\" + (__dataprop__ ? (' ' + __dataprop__) : '')} : {}, children);

exports.ArrowFunctionalComponent = ArrowFunctionalComponent;
ArrowFunctionalComponent.testid = \\"f49764c6\\";

function FunctionalComponent({
  children,
  'data-testid': __dataprop__
}) {
  return _react.default.createElement(\\"p\\", process.env.RESELECTOR === \\"true\\" ? {'data-testid': \\"b5d7faff\\" + (__dataprop__ ? (' ' + __dataprop__) : '')} : {}, children);
}

FunctionalComponent.testid = \\"b5d7faff\\";

const ComposedComponent = ({
  children,
  'data-testid': __dataprop__
}) => _react.default.createElement(Button, process.env.RESELECTOR === \\"true\\" ? {'data-testid': \\"8e388bfc\\" + (__dataprop__ ? (' ' + __dataprop__) : '')} : {}, children);

exports.ComposedComponent = ComposedComponent;
ComposedComponent.testid = \\"8e388bfc\\";

const ComponentWithAttrs = ({
  children,
  'data-testid': __dataprop__
}) => _react.default.createElement(\\"div\\", _extends({
  \\"data-test\\": \\"testme\\"
}, process.env.RESELECTOR === \\"true\\" ? {'data-testid': \\"889909b2\\" + (__dataprop__ ? (' ' + __dataprop__) : '')} : {}), children);

exports.ComponentWithAttrs = ComponentWithAttrs;
ComponentWithAttrs.testid = \\"889909b2\\";

const ComponentNoDestructure = props => _react.default.createElement(\\"p\\", process.env.RESELECTOR === \\"true\\" ? {'data-testid': \\"5613b2e5\\" + (props['data-testid'] ? (' ' + props['data-testid']) : '')} : {}, props.children);

exports.ComponentNoDestructure = ComponentNoDestructure;
ComponentNoDestructure.testid = \\"5613b2e5\\";

const ComposedComponent2 = ({
  children,
  'data-testid': __dataprop__
}) => _react.default.createElement(ComposedComponent, process.env.RESELECTOR === \\"true\\" ? {'data-testid': \\"60d032ee\\" + (__dataprop__ ? (' ' + __dataprop__) : '')} : {}, _react.default.createElement(\\"div\\", null, children));

exports.ComposedComponent2 = ComposedComponent2;
ComposedComponent2.testid = \\"60d032ee\\";

var _default = ({
  children,
  'data-testid': __dataprop__
}) => _react.default.createElement(\\"div\\", process.env.RESELECTOR === \\"true\\" ? {'data-testid': \\"5f9b51d4\\" + (__dataprop__ ? (' ' + __dataprop__) : '')} : {}, children);

exports.default = _default;

if (module.exports) {
  module.exports.default.testid = \\"5f9b51d4\\";
}"
`;

exports[`babel plugin transform should transform source code well for development 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.FunctionalComponent = FunctionalComponent;
exports.default = exports.ComposedComponent2 = exports.ComponentNoDestructure = exports.ComponentWithAttrs = exports.ComposedComponent = exports.ArrowFunctionalComponent = exports.ClassComponent = void 0;

var _react = _interopRequireDefault(require(\\"react\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

/* eslint-disable react/prefer-stateless-function */
const Button = props => _react.default.createElement('button', props, props.children);
/* eslint-disable no-unused-vars */


const UnexportComponent = ({
  children,
  'data-testid': __dataprop__
}) => _react.default.createElement(\\"div\\", {
  \\"data-testid\\": \\"c7b7156f\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
}, children);
/* eslint-enable no-unused-vars */


UnexportComponent.testid = \\"c7b7156f\\";

class ClassComponent extends _react.default.Component {
  render() {
    return _react.default.createElement(\\"div\\", {
      \\"data-testid\\": \\"a8f769be\\" + (this.props['data-testid'] ? ' ' + this.props['data-testid'] : '')
    }, this.props.children);
  }

}

exports.ClassComponent = ClassComponent;
ClassComponent.testid = \\"a8f769be\\";

const ArrowFunctionalComponent = ({
  children,
  'data-testid': __dataprop__
}) => _react.default.createElement(\\"div\\", {
  \\"data-testid\\": \\"f49764c6\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
}, children);

exports.ArrowFunctionalComponent = ArrowFunctionalComponent;
ArrowFunctionalComponent.testid = \\"f49764c6\\";

function FunctionalComponent({
  children,
  'data-testid': __dataprop__
}) {
  return _react.default.createElement(\\"p\\", {
    \\"data-testid\\": \\"b5d7faff\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
  }, children);
}

FunctionalComponent.testid = \\"b5d7faff\\";

const ComposedComponent = ({
  children,
  'data-testid': __dataprop__
}) => _react.default.createElement(Button, {
  \\"data-testid\\": \\"8e388bfc\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
}, children);

exports.ComposedComponent = ComposedComponent;
ComposedComponent.testid = \\"8e388bfc\\";

const ComponentWithAttrs = ({
  children,
  'data-testid': __dataprop__
}) => _react.default.createElement(\\"div\\", {
  \\"data-test\\": \\"testme\\",
  \\"data-testid\\": \\"889909b2\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
}, children);

exports.ComponentWithAttrs = ComponentWithAttrs;
ComponentWithAttrs.testid = \\"889909b2\\";

const ComponentNoDestructure = props => _react.default.createElement(\\"p\\", {
  \\"data-testid\\": \\"5613b2e5\\" + (props['data-testid'] ? ' ' + props['data-testid'] : '')
}, props.children);

exports.ComponentNoDestructure = ComponentNoDestructure;
ComponentNoDestructure.testid = \\"5613b2e5\\";

const ComposedComponent2 = ({
  children,
  'data-testid': __dataprop__
}) => _react.default.createElement(ComposedComponent, {
  \\"data-testid\\": \\"60d032ee\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
}, _react.default.createElement(\\"div\\", null, children));

exports.ComposedComponent2 = ComposedComponent2;
ComposedComponent2.testid = \\"60d032ee\\";

var _default = ({
  children,
  'data-testid': __dataprop__
}) => _react.default.createElement(\\"div\\", {
  \\"data-testid\\": \\"5f9b51d4\\" + (__dataprop__ ? ' ' + __dataprop__ : '')
}, children);

exports.default = _default;

if (module.exports) {
  module.exports.default.testid = \\"5f9b51d4\\";
}"
`;
